Bug 871438 - Reset value when file transfer session starts, r=gyeh

When the transferring session was stopped, mBodySegmentLength wouldn't reset
to 0, and that would impact the next transferring if the first packet of the
next transferring doesn't contain header Body or EndOfBody, which would invoke
ExtractPacketHeaders() and refresh mBodySegmentLength in the function.